base/n8n_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8nio-deployment
  labels:
    app: n8nio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8nio
  template:
    metadata:
      labels:
        app: n8nio
    spec:
      containers:
        - name: n8nio
          image: docker.n8n.io/n8nio/n8n
          imagePullPolicy: Always
          ports:
            - containerPort: 5678  
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:  
              path: /healthz
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: n8nio-persistent-storage
              mountPath: /home/node/.n8n
      volumes:
        - name: n8nio-persistent-storage
          persistentVolumeClaim:
            claimName: n8nio-pvc  
---
apiVersion: v1
kind: Service 
metadata:
  name: n8nio-service
spec:
  selector:
    app: n8nio
  ports:
  - protocol: TCP
    port: 5678
    targetPort: 5678
  type: ClusterIP
