base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8nio-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "n8nio.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8nio-service
            port:
              number: 5678
